[package]
name = "lockjaw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
uaparser = "0.6.1"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1.35", features = ["full"] }
select = "0.5"
url = "2.2.2"
clap = "2.33"
rusqlite = "0.30.0"
